[gd_scene load_steps=7 format=3 uid="uid://bbwqty7f5s3uv"]

[ext_resource type="Script" path="res://scripts/enemysWord1to10/enemigo_abeja.gd" id="1_5ipib"]
[ext_resource type="Texture2D" uid="uid://b8uh8t68ke1tn" path="res://tiles/world1-10/spritesAbeja.png" id="1_hvh8f"]

[sub_resource type="Animation" id="Animation_7ge25"]
resource_name = "attack"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesAbeja:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_4041m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritesAbeja:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4te6g"]
_data = {
"RESET": SubResource("Animation_4041m"),
"attack": SubResource("Animation_7ge25")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8yklr"]
size = Vector2(43, 20)

[node name="enemigoAbeja" type="Area2D"]
script = ExtResource("1_5ipib")

[node name="SpritesAbeja" type="Sprite2D" parent="."]
position = Vector2(128.125, 146.52)
scale = Vector2(0.604167, 0.64451)
texture = ExtResource("1_hvh8f")
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4te6g")
}
speed_scale = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(132, 142)
shape = SubResource("RectangleShape2D_8yklr")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
